--- a/style/lista.css
+++ b/style/lista.css
@@ -40,14 +40,14 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 0 5rem;
+    margin: 0 12.5rem;
 
     font-size: 1rem;
     font-family: "Nanum Gothic Coding", monospace;
     font-weight: 400;
     font-style: normal;
 
-    width: calc(100% - 10rem);
+    width: calc(100% - 25rem);
 }
 
 #input-nome, #input-status, #input-popularidade {
@@ -77,7 +77,7 @@
 }
 
 #tabela-herois {
-    width: calc(100% - 10rem);
+    width: calc(100% - 25rem);
     margin: 2rem auto;
     border-collapse: collapse;
 }
@@ -87,7 +87,7 @@
     color: #E5E5E5;
     padding: 1rem;
     font-size: 1.1rem;
-    text-align: left;
+    text-align: center;
 }
 
 #tabela-herois tbody tr {
@@ -99,6 +99,7 @@
     padding: 1rem;
     font-size: 1rem;
     border-bottom: 0.0625rem solid #ddd;
+    text-align: center;
 }
 
 #tabela-herois tbody tr:nth-child(even) {
