--- a/style/lista.css
+++ b/style/lista.css
@@ -82,6 +82,31 @@
     border-collapse: collapse;
 }
 
+#btns-lista {
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
+}
+
+.btn-excluir, .btn-editar {
+    cursor: pointer;
+    border-radius: 0.3125rem;
+    padding: 0.375rem 0.75rem;
+    
+    font-size: 1rem;
+    font-family: "Nanum Gothic Coding", monospace;
+}
+
+.btn-excluir:hover {
+    background-color: red;
+    color: black;
+}
+
+.btn-editar:hover {
+    background-color: black;
+    color: #ccc;
+}
+
 #tabela-herois thead th {
     background-color: #333;
     color: #E5E5E5;
