--- a/style/lista.css
+++ b/style/lista.css
@@ -145,3 +145,62 @@
         font-size: 0.9rem;
     }
 }
+
+#editar-heroi-dialog form {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: 1fr;
+    width: 100%;
+}
+
+#editar-heroi-dialog label {
+    font-size: 1rem;
+    font-family: "Nanum Gothic Coding", monospace;
+}
+
+#editar-heroi-dialog input, #editar-heroi-dialog select {
+    width: 100%;
+    margin: 0;
+    border-radius: 0.3125rem;
+    border: 0.0625rem solid black;
+
+    font-size: 1rem;
+    font-family: "Nanum Gothic Coding", monospace;
+}
+
+#editar-heroi-dialog .linha-dupla {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+}
+
+#editar-heroi-dialog .linha-tripla {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1rem;
+}
+
+#salvar-edicao, #btn-sair-edicao {
+    cursor: pointer;
+    border-radius: 0.3125rem;
+    padding: 0.375rem 0.75rem;
+    
+    font-size: 1rem;
+    font-family: "Nanum Gothic Coding", monospace;
+}
+
+#btn-sair-edicao {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+}
+
+#salvar-edicao:hover {
+    background-color: green;
+    color: black;
+}
+
+#btn-sair-edicao:hover {
+    background-color: red;
+    color: black;
+}
