--- a/style/crimes.css
+++ b/style/crimes.css
@@ -8,18 +8,16 @@
     margin-bottom: 3rem;
 }
 
-#btn-home, #btn-herois {
+#btn-home {
     border-radius: 0.5rem;
     padding: 0.6rem 1.2rem;
     
     font-size: 1rem;
     font-family: "Nanum Gothic Coding", monospace;
     cursor: pointer;
-
-    margin-right: 1rem;
 }
 
-#btn-home:hover, #btn-herois:hover {
+#btn-home:hover {
     background-color: black;
     color: #E5E5E5;
 
@@ -52,7 +50,7 @@
     width: calc(100% - 25rem);
 }
 
-#input-nome, #input-status, #input-popularidade {
+#input-nome, #input-severidade {
     padding: 0.625rem;
     margin: 0;
     border-radius: 0.3125rem;
@@ -78,7 +76,7 @@
     color: #ccc;
 }
 
-#tabela-herois {
+#tabela-crimes {
     width: calc(100% - 25rem);
     margin: 2rem auto;
     border-collapse: collapse;
@@ -109,7 +107,7 @@
     color: #ccc;
 }
 
-#tabela-herois thead th {
+#tabela-crimes thead th {
     background-color: #333;
     color: #E5E5E5;
     padding: 1rem;
@@ -117,92 +115,33 @@
     text-align: center;
 }
 
-#tabela-herois tbody tr {
+#tabela-crimes tbody tr {
     background-color: #f9f9f9;
     transition: background-color 0.3s;
 }
 
-#tabela-herois tbody td {
+#tabela-crimes tbody td {
     padding: 1rem;
     font-size: 1rem;
     border-bottom: 0.0625rem solid #ddd;
     text-align: center;
 }
 
-#tabela-herois tbody tr:nth-child(even) {
+#tabela-crimes tbody tr:nth-child(even) {
     background-color: #f0f0f0;
 }
 
-#tabela-herois tbody tr:hover {
+#tabela-crimes tbody tr:hover {
     background-color: #e0e0e0;
 }
 
 @media (max-width: 48rem) {
-    #tabela-herois {
+    #tabela-crimes {
         width: 100%;
     }
     
-    #tabela-herois thead th, #tabela-herois tbody td {
+    #tabela-crimes thead th, #tabela-crimes tbody td {
         padding: 0.8rem;
         font-size: 0.9rem;
     }
-}
-
-#editar-heroi-dialog form {
-    display: grid;
-    gap: 1rem;
-    grid-template-columns: 1fr;
-    width: 100%;
-}
-
-#editar-heroi-dialog label {
-    font-size: 1rem;
-    font-family: "Nanum Gothic Coding", monospace;
-}
-
-#editar-heroi-dialog input, #editar-heroi-dialog select {
-    width: 100%;
-    margin: 0;
-    border-radius: 0.3125rem;
-    border: 0.0625rem solid black;
-
-    font-size: 1rem;
-    font-family: "Nanum Gothic Coding", monospace;
-}
-
-#editar-heroi-dialog .linha-dupla {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 1rem;
-}
-
-#editar-heroi-dialog .linha-tripla {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 1rem;
-}
-
-#salvar-edicao, #btn-sair-edicao {
-    cursor: pointer;
-    border-radius: 0.3125rem;
-    padding: 0.375rem 0.75rem;
-    
-    font-size: 1rem;
-    font-family: "Nanum Gothic Coding", monospace;
-}
-
-#btn-sair-edicao {
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
-}
-
-#salvar-edicao:hover {
-    background-color: green;
-    color: black;
-}
-
-#btn-sair-edicao:hover {
-    background-color: red;
-    color: black;
 }
