--- a/style/crimes.css
+++ b/style/crimes.css
@@ -50,7 +50,7 @@
     width: calc(100% - 25rem);
 }
 
-#input-nome, #input-severidade {
+#input-nome, #input-severidade, #input-data {
     padding: 0.625rem;
     margin: 0;
     border-radius: 0.3125rem;
@@ -68,12 +68,97 @@
     padding: 0.375rem 0.75rem; 
     font-size: 1rem; 
     font-family: "Nanum Gothic Coding", monospace;
-    cursor: pointer;
 }
 
 #btn-busca-nome-status:hover, #btn-todos:hover {
     background-color: black;
     color: #ccc;
+}
+
+#btn-cadastrar-crime {
+    cursor: pointer;
+    border-radius: 0.3125rem;
+    padding: 0.375rem 0.75rem;
+    border: black solid;
+
+    font-size: 1rem;
+    font-family: "Nanum Gothic Coding", monospace;
+
+    background-color: green;
+    color: white;
+}
+
+#btn-cadastrar-crime:hover {
+    background-color: rgb(102, 205, 102);
+}
+
+#btn-dialog-cadastrar {
+    cursor: pointer;
+    border-radius: 0.3125rem;
+    padding: 0.5rem 0.8rem;
+    
+    font-size: 1.5rem;
+    font-family: "Nanum Gothic Coding", monospace;
+}
+
+#btn-dialog-cadastrar:hover {
+    background-color: green;
+    color: #E5E5E5;
+}
+
+#btn-dialog-cadastrar-fechar {
+    cursor: pointer;
+    border-radius: 0.3125rem;
+    padding: 0.8rem 1.3rem;
+    
+    font-size: 2rem;
+    font-family: "Nanum Gothic Coding", monospace;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+}
+
+#btn-dialog-cadastrar-fechar:hover {
+    background-color: red;
+}
+
+#dialog-cadastrar {
+    width: 43.75rem;
+    padding: 1.25rem;
+    border-radius: 8px;
+}
+
+#desc-crime {
+    width: 100%;
+    height: 6.25rem;
+    resize: vertical;
+}
+
+#dialog-cadastrar form {
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 100%;
+}
+
+#dialog-cadastrar label {
+    font-size: 1.5rem;
+    font-family: "Nanum Gothic Coding", monospace;
+}
+
+#dialog-cadastrar input, #dialog-cadastrar select, #dialog-cadastrar textarea {
+    width: 100%;
+    margin: 0;
+    border-radius: 0.3125rem;
+    border: 0.0625rem solid black;
+
+    font-size: 1rem;
+    font-family: "Nanum Gothic Coding", monospace;
+}
+
+#dialog-cadastrar #linha-dupla {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
 }
 
 #tabela-crimes {
