--- a/style/batalha.css
+++ b/style/batalha.css
@@ -6,12 +6,15 @@
     position: relative;
 
     margin-bottom: 3rem;
+    margin-top: 2rem;
 }
 
 #btn-home {
     border-radius: 0.5rem;
     padding: 0.6rem 1.2rem;
     
+    margin-left: 2rem;
+
     font-size: 1rem;
     font-family: "Nanum Gothic Coding", monospace;
     cursor: pointer;
@@ -38,12 +41,134 @@
 
 #div-batalha {
     display: flex;
-    gap: 10rem;
+    align-items: center;
+    justify-content: flex-start;
+    
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+
+    margin-top: 1rem;
+    gap: 20rem;
+
 }
 
 .imagem-heroi-padrao {
     width: 18rem;
     height: 20rem;
-    margin-left: 10px;
     vertical-align: middle;
+}
+
+.seletor {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    font-size: 1.8rem;
+    font-family: "Nanum Gothic Coding", monospace;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.seletor label {
+    margin-bottom: 1rem;
+}
+
+.seletor select {
+    margin-bottom: 3rem;
+
+    font-size: 1.5rem;
+    font-family: "Nanum Gothic Coding", monospace;
+    font-weight: 400;
+    font-style: normal;
+
+    padding: 0.625rem;
+    border-radius: 0.3125rem;
+    border: 0.0625rem solid black;
+}
+
+#div-batalha .seletor .heroi-nome {
+    margin-bottom: 1rem;
+
+    font-size: 2rem;
+    font-family: "Nanum Gothic Coding", monospace;
+    font-weight: 400;
+    font-style: normal;
+}
+
+#div-batalha .seletor .heroi-dados {
+    display: flex;
+    flex-direction: column;
+}
+
+.dados-linha {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+}
+
+.dados-linha p {
+    margin: 0;
+
+    white-space: nowrap;
+
+    font-size: 1.5rem;
+    font-family: "Nanum Gothic Coding", monospace;
+    font-weight: 400;
+}
+
+.dados-linha p:first-child {
+   margin-right: 1.5rem;
+}
+
+.dados-linha p:last-child {
+    margin-left: 1.5rem;
+}
+
+#vs {
+    font-size: 7rem;
+    font-weight: bold;
+    
+    text-align: center;
+    margin: 1.5rem;
+}
+
+#btn-batalhar {
+    border-radius: 0.5rem;
+    padding: 2rem 4rem;
+
+    font-size: 2rem;
+    cursor: pointer;
+
+    font-family: "Nanum Gothic Coding", monospace;
+    cursor: pointer;
+}
+
+#btn-batalhar:hover {
+    background-color: black;
+    color: #E5E5E5;
+}
+
+#dialog-content {
+    width: 70rem;
+    padding: 1.25rem;
+    border-radius: 8px;
+}
+
+#etapas-batalha {
+    font-size: 1.4rem;
+    white-space: nowrap;
+
+    font-family: "Nanum Gothic Coding", monospace;
+    cursor: pointer;
+
+    margin-bottom: 1rem;
+}
+
+#etapas-batalha .logs {
+    margin-bottom: 3rem;
+}
+
+#etapas-batalha p {
+    margin-bottom: 0.8rem;
 }
