--- a/style/lista.css
+++ b/style/lista.css
@@ -8,7 +8,7 @@
     margin-bottom: 3rem;
 }
 
-#btn-home, #btn-herois {
+#btn-home, #btn-herois, #btn-batalha {
     border-radius: 0.5rem;
     padding: 0.6rem 1.2rem;
     
@@ -19,7 +19,7 @@
     margin-right: 1rem;
 }
 
-#btn-home:hover, #btn-herois:hover {
+#btn-home:hover, #btn-herois:hover, #btn-batalha:hover {
     background-color: black;
     color: #E5E5E5;
 
@@ -265,4 +265,3 @@
 #poderes-lista span button:hover {
     background-color: red;
 }
-
