--- a/style/missoes.css
+++ b/style/missoes.css
@@ -24,10 +24,10 @@
 }
 
 #titulo {
-    font-size:2rem;
+    font-size: 3rem;
     font-family: "Nanum Gothic Coding", monospace;
     font-weight: 400;
-    font-style: normal;
+    font-style: bold;
 
     position: absolute;
     left: 50%;
@@ -35,3 +35,91 @@
     text-align: center;
     width: max-content;
 }
+
+.btn {
+    text-align: center;
+    
+    margin-top: 10rem;
+    margin-bottom: 3rem;
+}
+
+#btn-cadastrar-missao, #btn-mostrar-missoes {
+    width: 31.25rem;
+    padding: 2% 9.4%;
+    border-radius: 0.5rem;
+
+    font-size: 1.5rem;
+    font-family: "Nanum Gothic Coding", monospace;
+    font-weight: 400;
+
+    display: block;
+    margin: auto;
+}
+
+#btn-cadastrar-missao:hover, #btn-mostrar-missoes:hover {
+    background-color: black;
+    color: #E5E5E5;
+    font-weight: bold;
+}
+
+a {
+    text-decoration: none;
+}
+
+#dialog-cadastrar-missao {
+    width: 70rem;
+    height: 29rem;
+}
+
+#btn-dialog-cadastrar {
+    cursor: pointer;
+    border-radius: 0.3125rem;
+    padding: 0.5rem 0.8rem;
+    
+    font-size: 1.5rem;
+    font-family: "Nanum Gothic Coding", monospace;
+}
+
+#btn-dialog-cadastrar:hover {
+    background-color: green;
+    color: #E5E5E5;
+}
+
+#btn-dialog-cadastrar-fechar {
+    cursor: pointer;
+    border-radius: 0.3125rem;
+    padding: 0.8rem 1.3rem;
+    
+    font-size: 2rem;
+    font-family: "Nanum Gothic Coding", monospace;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+}
+
+#btn-dialog-cadastrar-fechar:hover {
+    background-color: red;
+}
+
+#dialog-cadastrar-missao form {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: 1fr;
+    width: 100%;
+}
+
+#dialog-cadastrar-missao label {
+    font-size: 1rem;
+    font-family: "Nanum Gothic Coding", monospace;
+}
+
+#dialog-cadastrar-missao input, #dialog-cadastrar-missao select, #dialog-cadastrar-missao textarea {
+    width: 100%;
+    margin: 0;
+    border-radius: 0.3125rem;
+    border: 0.0625rem solid black;
+
+    font-size: 1rem;
+    font-family: "Nanum Gothic Coding", monospace;
+}
+
