2211 - Falta implementar os herois nas missões.

--- a/style/heroes.css
+++ b/style/heroes.css
@@ -95,6 +95,11 @@ a {
     text-decoration: none;
 }
 
+#dialog-cadastrar {
+    
+    font-family: "Nanum Gothic Coding", monospace;
+}
+
 #dialog-cadastrar form {
     display: grid;
     gap: 1rem;
