2211 - Implementado CR de missões com herois.

--- a/style/missoes_lista.css
+++ b/style/missoes_lista.css
@@ -90,6 +90,13 @@ td {
     white-space: nowrap;
 }
 
+.img-heroi-responsavel {
+    width: 2.5rem;
+    height: 5rem;
+    margin-right: 5px;
+    object-fit: cover;
+}
+
 th {
     white-space: nowrap;
 }
