--- a/style/missoes.css
+++ b/style/missoes.css
@@ -68,7 +68,7 @@ a {
 
 #dialog-cadastrar-missao {
     width: 70rem;
-    height: 29rem;
+    height: 40rem;
     
     font-family: "Nanum Gothic Coding", monospace;
 }
@@ -123,5 +123,62 @@ a {
 
     font-size: 1rem;
     font-family: "Nanum Gothic Coding", monospace;
+}
+
+.linha-herois {
+    display: flex;
+    align-items: end;
+    gap: 1rem;
+}
+
+.linha-herois div:first-child {
+    flex: 0 0 70%;
+}
+
+.linha-herois div:last-child {
+    flex: 0 0 30%;
+}
+
+#herois {
+    width: 100%;
+}
+
+#btn-adicionar-heroi {
+    width: 80%;
+
+    cursor: pointer;
+    border-radius: 0.3125rem;
+    
+    font-size: 1rem;
+    font-family: "Nanum Gothic Coding", monospace;
+}
+
+#btn-adicionar-heroi:hover {
+    background-color: black;
+    color: #CCC;
+}
+
+#herois-lista {
+    gap: 1rem;
+}
+
+#herois-lista span {
+    margin-right: 1rem;
+    font-size: 1.3rem;
+    font-family: "Nanum Gothic Coding", monospace;
+}
+
+.btn-remover-heroi {
+    cursor: pointer;
+    border-radius: 0.3125rem;
+
+    margin-left: 0.4rem;
+    
+    font-size: 1rem;
+    font-family: "Nanum Gothic Coding", monospace;
+}
+
+.btn-remover-heroi:hover {
+    background-color: red;
 }
 
