--- a/style/crimes.css
+++ b/style/crimes.css
@@ -1,23 +1,23 @@
 #header {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-
-    position: relative;
+    text-align: center;
+    padding: 1rem;
+    background-color: #F4F4F4;
 
     margin-bottom: 3rem;
 }
 
-#btn-home {
+#btn-home, #btn-herois, #btn-batalha, #btn-crimes, #btn-missoes {
     border-radius: 0.5rem;
     padding: 0.6rem 1.2rem;
     
     font-size: 1rem;
     font-family: "Nanum Gothic Coding", monospace;
     cursor: pointer;
+
+    margin-right: 1rem;
 }
 
-#btn-home:hover {
+#btn-home:hover, #btn-herois:hover, #btn-batalha:hover, #btn-crimes:hover, #btn-missoes:hover {
     background-color: black;
     color: #E5E5E5;
 
@@ -27,7 +27,9 @@
     font-size:2rem;
     font-family: "Nanum Gothic Coding", monospace;
     font-weight: 400;
-    font-style: normal;
+    font-style: bold;
+
+    margin-bottom: 2rem;
 
     position: absolute;
     left: 50%;
@@ -36,6 +38,22 @@
     width: max-content;
 }
 
+#subtitulo {
+    font-size:2rem;
+    font-family: "Nanum Gothic Coding", monospace;
+    font-weight: 400;
+    font-style: normal;
+
+    text-align: center;
+}
+
+#menu {
+    display: flex;
+    justify-content: center;
+    gap: 9rem;
+
+    margin-top: 5rem;
+}
 #filtros {
     display: flex;
     align-items: center;
