--- a/style/missoes_lista.css
+++ b/style/missoes_lista.css
@@ -1,14 +1,12 @@
-#cabecalho {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-
-    position: relative;
+#header {
+    text-align: center;
+    padding: 1rem;
+    background-color: #F4F4F4;
 
     margin-bottom: 3rem;
 }
 
-#btn-home, #btn-missoes {
+#btn-home, #btn-herois, #btn-batalha, #btn-crimes, #btn-missoes {
     border-radius: 0.5rem;
     padding: 0.6rem 1.2rem;
     
@@ -19,7 +17,7 @@
     margin-right: 1rem;
 }
 
-#btn-home:hover, #btn-missoes:hover {
+#btn-home:hover, #btn-herois:hover, #btn-batalha:hover, #btn-crimes:hover, #btn-missoes:hover {
     background-color: black;
     color: #E5E5E5;
 
@@ -29,13 +27,32 @@
     font-size:2rem;
     font-family: "Nanum Gothic Coding", monospace;
     font-weight: 400;
-    font-style: normal;
+    font-style: bold;
+
+    margin-bottom: 2rem;
 
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
     text-align: center;
     width: max-content;
+}
+
+#subtitulo {
+    font-size:2rem;
+    font-family: "Nanum Gothic Coding", monospace;
+    font-weight: 400;
+    font-style: normal;
+
+    text-align: center;
+}
+
+#menu {
+    display: flex;
+    justify-content: center;
+    gap: 9rem;
+
+    margin-top: 5rem;
 }
 
 #filtros {
@@ -64,7 +81,7 @@
     width: 15.625rem;
 }
 
-#btn-busca-missoes, #btn-todas-missoes {
+#btn-busca-missoes, #btn-todas-missoes, #btn-cadastrar-missao {
     cursor: pointer;
     border-radius: 0.3125rem; 
     padding: 0.375rem 0.75rem; 
@@ -76,6 +93,127 @@
 #btn-busca-missoes:hover, #btn-todas-missoes:hover {
     background-color: black;
     color: #ccc;
+}
+
+#btn-cadastrar-missao:hover {
+    background-color: green;
+    color: white;
+}
+
+#dialog-cadastrar-missao {
+    width: 70rem;
+    height: 40rem;
+    
+    font-family: "Nanum Gothic Coding", monospace;
+}
+
+#btn-dialog-cadastrar {
+    cursor: pointer;
+    border-radius: 0.3125rem;
+    padding: 0.5rem 0.8rem;
+    
+    font-size: 1.5rem;
+    font-family: "Nanum Gothic Coding", monospace;
+}
+
+#btn-dialog-cadastrar:hover {
+    background-color: green;
+    color: #E5E5E5;
+}
+
+#btn-dialog-cadastrar-fechar {
+    cursor: pointer;
+    border-radius: 0.3125rem;
+    padding: 0.8rem 1.3rem;
+    
+    font-size: 2rem;
+    font-family: "Nanum Gothic Coding", monospace;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+}
+
+#btn-dialog-cadastrar-fechar:hover {
+    background-color: red;
+}
+
+#dialog-cadastrar-missao form {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: 1fr;
+    width: 100%;
+}
+
+#dialog-cadastrar-missao label {
+    font-size: 1rem;
+    font-family: "Nanum Gothic Coding", monospace;
+}
+
+#dialog-cadastrar-missao input, #dialog-cadastrar-missao select, #dialog-cadastrar-missao textarea {
+    width: 100%;
+    margin: 0;
+    border-radius: 0.3125rem;
+    border: 0.0625rem solid black;
+
+    font-size: 1rem;
+    font-family: "Nanum Gothic Coding", monospace;
+}
+
+.linha-herois {
+    display: flex;
+    align-items: end;
+    gap: 1rem;
+}
+
+.linha-herois div:first-child {
+    flex: 0 0 70%;
+}
+
+.linha-herois div:last-child {
+    flex: 0 0 30%;
+}
+
+#herois {
+    width: 100%;
+}
+
+#btn-adicionar-heroi {
+    width: 80%;
+
+    cursor: pointer;
+    border-radius: 0.3125rem;
+    
+    font-size: 1rem;
+    font-family: "Nanum Gothic Coding", monospace;
+}
+
+#btn-adicionar-heroi:hover {
+    background-color: black;
+    color: #CCC;
+}
+
+#herois-lista {
+    gap: 1rem;
+}
+
+#herois-lista span {
+    margin-right: 1rem;
+    font-size: 1.3rem;
+    font-family: "Nanum Gothic Coding", monospace;
+}
+
+.btn-remover-heroi {
+    cursor: pointer;
+    border-radius: 0.3125rem;
+
+    margin-left: 0.4rem;
+    
+    font-size: 1rem;
+    font-family: "Nanum Gothic Coding", monospace;
+}
+
+.btn-remover-heroi:hover {
+    background-color: red;
 }
 
 #tabela-missoes {
