--- a/style/batalha.css
+++ b/style/batalha.css
@@ -138,6 +138,62 @@
     margin-left: 1.5rem;
 }
 
+#opcoes-batalha {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 2rem;
+}
+
+.checkbox-pair {
+    display: flex;
+    justify-content: space-between;
+    gap: 10rem;
+    margin-bottom: 1rem;
+    font-family: "Nanum Gothic Coding", monospace;
+    font-size: 1.2rem;
+    width: 100%;
+}
+
+.checkbox-pair label {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    cursor: pointer;
+
+    font-size: 1.5rem;
+    font-family: "Nanum Gothic Coding", monospace;
+    font-weight: 400;
+}
+
+.checkbox-pair label:first-child {
+    justify-content: flex-start;
+}
+
+.checkbox-pair label:last-child {
+    justify-content: flex-end;
+}
+
+.checkbox-pair input {
+    cursor: pointer;
+    transform: scale(1.2);
+    margin-right: 0.5rem;
+}
+
+.linha-superior {
+    font-weight: bold;
+}
+
+.linha-inferior {
+    font-size: 0.9rem;
+    color: #555;
+    display: block;
+
+    font-size: 1.23rem;
+    font-family: "Nanum Gothic Coding", monospace;
+    font-weight: 400;
+}
+
 #vs {
     font-size: 7rem;
     font-weight: bold;
@@ -154,7 +210,9 @@
     cursor: pointer;
 
     font-family: "Nanum Gothic Coding", monospace;
-    cursor: pointer;
+
+    display: block;
+    margin: 0 auto;
 }
 
 #btn-batalhar:hover {
